move examples into ImageNet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project (caffe2_cpp_tutorial)
 find_package(OpenCV REQUIRED)
 find_package(Protobuf REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(cURL REQUIRED)
 
 include_directories(include)
 include_directories(${EIGEN3_INCLUDE_DIR})
@@ -13,6 +14,10 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 find_library(CAFFE2_LIB Caffe2_CPU)
 find_library(GLOG_LIB glog)
 find_library(GFLAGS_LIB gflags)
+
+if(NOT CAFFE2_LIB)
+  message(FATAL_ERROR "Caffe2 lib not found")
+endif()
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
@@ -36,15 +41,5 @@ target_link_libraries(pretrained ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} $
 add_executable(mnist src/mnist.cpp)
 target_link_libraries(mnist ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB})
 
-
-add_executable(alexnet src/alexnet.cpp)
-target_link_libraries(alexnet ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
-
-add_executable(googlenet src/googlenet.cpp)
-target_link_libraries(googlenet ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
-
-add_executable(squeezenet src/squeezenet.cpp)
-target_link_libraries(squeezenet ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
-
-add_executable(vgg16 src/vgg16.cpp)
-target_link_libraries(vgg16 ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
+add_executable(imagenet src/imagenet.cpp)
+target_link_libraries(imagenet ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS} ${CURL_LIBRARIES})
