--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,5 +68,8 @@ if(CURL_LIBRARIES)
   target_link_libraries(imagenet ${CURL_LIBRARIES})
 endif()
 
-#add_executable(retrain src/retrain.cpp)
-#target_link_libraries(retrain ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
+add_executable(retrain src/retrain.cpp)
+target_link_libraries(retrain ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
+if(CURL_LIBRARIES)
+  target_link_libraries(retrain ${CURL_LIBRARIES})
+endif()
