--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(Eigen3 REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(cURL QUIET)
 find_package(CUDA QUIET)
+find_package(Threads)
 
 include_directories(include)
 include_directories(${EIGEN3_INCLUDE_DIR})
@@ -69,7 +70,10 @@ if(CURL_LIBRARIES)
 endif()
 
 add_executable(retrain src/retrain.cpp)
-target_link_libraries(retrain ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
+target_link_libraries(retrain ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
 if(CURL_LIBRARIES)
   target_link_libraries(retrain ${CURL_LIBRARIES})
+endif()
+if(CUDA_LIBRARIES)
+  target_link_libraries(retrain ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
 endif()
