--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,3 +80,12 @@ endif()
 if(CUDA_LIBRARIES)
   target_link_libraries(retrain ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
 endif()
+
+add_executable(dream src/dream.cpp)
+target_link_libraries(dream ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
+if(CURL_LIBRARIES)
+  target_link_libraries(dream ${CURL_LIBRARIES})
+endif()
+if(CUDA_LIBRARIES)
+  target_link_libraries(dream ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
+endif()
