add dream operators

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ endif()
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
+file(GLOB OPERATOR_SOURCES "include/operator/*.cc")
 file(GLOB SOURCES "src/*.cpp")
 
 if(NOT EXISTS ${CMAKE_SOURCE_DIR}/include/res/imagenet_classes.h)
