--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,3 +99,9 @@ endif()
 if(CUDA_LIBRARIES)
   target_link_libraries(train ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
 endif()
+
+add_executable(diff src/diff.cpp)
+target_link_libraries(diff ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${CMAKE_THREAD_LIBS_INIT})
+if(CURL_LIBRARIES)
+  target_link_libraries(diff ${CURL_LIBRARIES})
+endif()
