move image to tensor util

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 file(GLOB OPERATOR_SOURCES "include/operator/*.cc")
-file(GLOB SOURCES "src/*.cpp")
+file(GLOB SOURCES "src/caffe2/util/*.cc")
 
 if(NOT EXISTS ${CMAKE_SOURCE_DIR}/include/res/imagenet_classes.h)
   file(DOWNLOAD https://raw.githubusercontent.com/bwasti/AICamera/master/app/src/main/cpp/classes.h ${CMAKE_SOURCE_DIR}/include/res/imagenet_classes.h)
@@ -82,7 +82,7 @@ if(CUDA_LIBRARIES)
   target_link_libraries(retrain ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
 endif()
 
-add_executable(dream src/dream.cpp ${OPERATOR_SOURCES})
+add_executable(dream src/dream.cpp ${SOURCES} ${OPERATOR_SOURCES})
 target_link_libraries(dream ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
 if(CURL_LIBRARIES)
   target_link_libraries(dream ${CURL_LIBRARIES})
@@ -91,7 +91,7 @@ if(CUDA_LIBRARIES)
   target_link_libraries(dream ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
 endif()
 
-add_executable(train src/train.cpp ${OPERATOR_SOURCES})
+add_executable(train src/train.cpp ${SOURCES} ${OPERATOR_SOURCES})
 target_link_libraries(train ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
 if(CURL_LIBRARIES)
   target_link_libraries(train ${CURL_LIBRARIES})
@@ -101,7 +101,7 @@ if(CUDA_LIBRARIES)
 endif()
 
 add_executable(diff src/diff.cpp)
-target_link_libraries(diff ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(diff ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
 if(CURL_LIBRARIES)
   target_link_libraries(diff ${CURL_LIBRARIES})
 endif()
