--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,9 @@ find_package(Threads)
 
 include_directories(include)
 include_directories(${EIGEN3_INCLUDE_DIR})
-include_directories(${OpenCV_INCLUDE_DIRS})
+if(OpenCV_LIBS)
+  include_directories(${OpenCV_INCLUDE_DIRS})
+endif()
 if(CUDA_LIBRARIES)
   include_directories(${CUDA_INCLUDE_DIRS})
 endif()
@@ -30,78 +32,64 @@ endif()
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
-file(GLOB OPERATOR_SOURCES "include/operator/*.cc")
-file(GLOB SOURCES "src/caffe2/util/*.cc")
-
 if(NOT EXISTS ${CMAKE_SOURCE_DIR}/include/res/imagenet_classes.h)
   file(DOWNLOAD https://raw.githubusercontent.com/bwasti/AICamera/master/app/src/main/cpp/classes.h ${CMAKE_SOURCE_DIR}/include/res/imagenet_classes.h)
 endif()
 
+set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CAFFE2_LIB})
+set(ALL_LIBRARIES ${ALL_LIBRARIES} ${PROTOBUF_LIBRARY})
+set(ALL_LIBRARIES ${ALL_LIBRARIES} ${GLOG_LIB} ${GFLAGS_LIB})
+set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+
+if(OpenCV_LIBS)
+  set(ALL_LIBRARIES ${ALL_LIBRARIES} ${OpenCV_LIBS})
+  add_definitions(-DWITH_OPENCV)
+endif()
+
 if(CUDA_LIBRARIES)
+  set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
   add_definitions(-DWITH_CUDA)
 endif()
 
 if(CURL_LIBRARIES)
+  set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CURL_LIBRARIES})
   add_definitions(-DWITH_CURL)
 endif()
 
 if(CAFFE2_GPU_LIB)
+  set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CAFFE2_GPU_LIB})
   add_definitions(-DWITH_GPU)
 endif()
 
+file(GLOB LIB_SOURCES "src/caffe2/util/*.cc")
+add_library(caffe2_cpp ${LIB_SOURCES})
+set(ALL_LIBRARIES ${ALL_LIBRARIES} caffe2_cpp)
+
+file(GLOB OPERATOR_SOURCES "src/caffe2/operator/*.cc")
+
 add_executable(intro src/intro.cpp)
-target_link_libraries(intro ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB})
+target_link_libraries(intro ${ALL_LIBRARIES})
 
 add_executable(toy src/toy.cpp)
-target_link_libraries(toy ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB})
+target_link_libraries(toy ${ALL_LIBRARIES})
 
 add_executable(pretrained src/pretrained.cpp)
-target_link_libraries(pretrained ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
+target_link_libraries(pretrained ${ALL_LIBRARIES})
 
 add_executable(mnist src/mnist.cpp)
-target_link_libraries(mnist ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB})
-if(CUDA_LIBRARIES)
-  target_link_libraries(mnist ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
-endif()
+target_link_libraries(mnist ${ALL_LIBRARIES})
 
 add_executable(imagenet src/imagenet.cpp)
-target_link_libraries(imagenet ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
-if(CURL_LIBRARIES)
-  target_link_libraries(imagenet ${CURL_LIBRARIES})
-endif()
-if(CUDA_LIBRARIES)
-  target_link_libraries(imagenet ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
-endif()
+target_link_libraries(imagenet ${ALL_LIBRARIES})
 
-add_executable(retrain src/retrain.cpp)
-target_link_libraries(retrain ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
-if(CURL_LIBRARIES)
-  target_link_libraries(retrain ${CURL_LIBRARIES})
-endif()
-if(CUDA_LIBRARIES)
-  target_link_libraries(retrain ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
-endif()
+add_executable(retrain src/retrain.cpp ${OPERATOR_SOURCES})
+target_link_libraries(retrain ${ALL_LIBRARIES})
 
-add_executable(dream src/dream.cpp ${SOURCES} ${OPERATOR_SOURCES})
-target_link_libraries(dream ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS})
-if(CURL_LIBRARIES)
-  target_link_libraries(dream ${CURL_LIBRARIES})
-endif()
-if(CUDA_LIBRARIES)
-  target_link_libraries(dream ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
-endif()
+add_executable(dream src/dream.cpp ${OPERATOR_SOURCES})
+target_link_libraries(dream ${ALL_LIBRARIES})
 
-add_executable(train src/train.cpp ${SOURCES} ${OPERATOR_SOURCES})
-target_link_libraries(train ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
-if(CURL_LIBRARIES)
-  target_link_libraries(train ${CURL_LIBRARIES})
-endif()
-if(CUDA_LIBRARIES)
-  target_link_libraries(train ${CAFFE2_GPU_LIB} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
-endif()
+add_executable(train src/train.cpp ${OPERATOR_SOURCES})
+target_link_libraries(train ${ALL_LIBRARIES})
 
 add_executable(diff src/diff.cpp)
-target_link_libraries(diff ${CAFFE2_LIB} ${PROTOBUF_LIBRARY} ${GLOG_LIB} ${GFLAGS_LIB} ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
-if(CURL_LIBRARIES)
-  target_link_libraries(diff ${CURL_LIBRARIES})
-endif()
+target_link_libraries(diff ${ALL_LIBRARIES})
