add show image to dream

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ if(NOT CAFFE2_LIB)
   message(FATAL_ERROR "Caffe2 lib not found")
 endif()
 
+set(ALL_LIBRARIES)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
@@ -36,36 +37,52 @@ if(NOT EXISTS ${CMAKE_SOURCE_DIR}/include/res/imagenet_classes.h)
   file(DOWNLOAD https://raw.githubusercontent.com/bwasti/AICamera/master/app/src/main/cpp/classes.h ${CMAKE_SOURCE_DIR}/include/res/imagenet_classes.h)
 endif()
 
-set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CAFFE2_LIB})
-set(ALL_LIBRARIES ${ALL_LIBRARIES} ${PROTOBUF_LIBRARY})
-set(ALL_LIBRARIES ${ALL_LIBRARIES} ${GLOG_LIB} ${GFLAGS_LIB})
-set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+file(GLOB LIB_SOURCES "src/caffe2/util/*.cc" "src/caffe2/operator/*.cc")
+add_library(caffe2_cpp ${LIB_SOURCES})
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  list(APPEND ALL_LIBRARIES -Wl,-force_load caffe2_cpp)
+else()
+  list(APPEND ALL_LIBRARIES -Wl,--whole-archive caffe2_cpp -Wl,--no-whole-archive)
+endif()
+
+if(CUDA_LIBRARIES)
+  # set(CUDA_PROPAGATE_HOST_FLAGS OFF)
+  list(APPEND CUDA_NVCC_FLAGS "-std=c++11")
+  list(APPEND CUDA_NVCC_FLAGS "-Wno-deprecated-gpu-targets")
+  file(GLOB CUDA_SOURCES "src/caffe2/operator/*.cu")
+  cuda_add_library(caffe2_cpp_gpu ${CUDA_SOURCES})
+  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    list(APPEND ALL_LIBRARIES -Wl,-force_load caffe2_cpp_gpu)
+  else()
+    list(APPEND ALL_LIBRARIES -Wl,--whole-archive caffe2_cpp_gpu -Wl,--no-whole-archive)
+  endif()
+endif()
+
+list(APPEND ALL_LIBRARIES ${CAFFE2_LIB})
+
+if(CAFFE2_GPU_LIB)
+  list(APPEND ALL_LIBRARIES ${CAFFE2_GPU_LIB})
+  add_definitions(-DWITH_GPU)
+endif()
+
+list(APPEND ALL_LIBRARIES ${PROTOBUF_LIBRARY})
+list(APPEND ALL_LIBRARIES ${GLOG_LIB} ${GFLAGS_LIB})
+list(APPEND ALL_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
 
 if(OpenCV_LIBS)
-  set(ALL_LIBRARIES ${ALL_LIBRARIES} ${OpenCV_LIBS})
+  list(APPEND ALL_LIBRARIES ${OpenCV_LIBS})
   add_definitions(-DWITH_OPENCV)
 endif()
 
 if(CUDA_LIBRARIES)
-  set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
+  list(APPEND ALL_LIBRARIES ${CUDA_LIBRARIES} ${CUDA_CUDART_LIBRARY} ${NCCL_LIB} ${CURAND_LIB})
   add_definitions(-DWITH_CUDA)
 endif()
 
 if(CURL_LIBRARIES)
-  set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CURL_LIBRARIES})
+  list(APPEND ALL_LIBRARIES ${CURL_LIBRARIES})
   add_definitions(-DWITH_CURL)
 endif()
-
-if(CAFFE2_GPU_LIB)
-  set(ALL_LIBRARIES ${ALL_LIBRARIES} ${CAFFE2_GPU_LIB})
-  add_definitions(-DWITH_GPU)
-endif()
-
-file(GLOB LIB_SOURCES "src/caffe2/util/*.cc")
-add_library(caffe2_cpp ${LIB_SOURCES})
-set(ALL_LIBRARIES ${ALL_LIBRARIES} caffe2_cpp)
-
-file(GLOB OPERATOR_SOURCES "src/caffe2/operator/*.cc")
 
 add_executable(intro src/intro.cpp)
 target_link_libraries(intro ${ALL_LIBRARIES})
@@ -82,13 +99,13 @@ target_link_libraries(mnist ${ALL_LIBRARIES})
 add_executable(imagenet src/imagenet.cpp)
 target_link_libraries(imagenet ${ALL_LIBRARIES})
 
-add_executable(retrain src/retrain.cpp ${OPERATOR_SOURCES})
+add_executable(retrain src/retrain.cpp)
 target_link_libraries(retrain ${ALL_LIBRARIES})
 
-add_executable(dream src/dream.cpp ${OPERATOR_SOURCES})
+add_executable(dream src/dream.cpp)
 target_link_libraries(dream ${ALL_LIBRARIES})
 
-add_executable(train src/train.cpp ${OPERATOR_SOURCES})
+add_executable(train src/train.cpp)
 target_link_libraries(train ${ALL_LIBRARIES})
 
 add_executable(diff src/diff.cpp)
