fix cmake ref to project dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,13 +30,13 @@ endif()
 
 set(ALL_LIBRARIES)
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 
-if(NOT EXISTS "${CMAKE_SOURCE_DIR}/include/res/imagenet_classes.h")
-  file(DOWNLOAD "https://raw.githubusercontent.com/bwasti/AICamera/master/app/src/main/cpp/classes.h" "${CMAKE_SOURCE_DIR}/include/res/imagenet_classes.h")
+if(NOT EXISTS "${PROJECT_SOURCE_DIR}/include/res/imagenet_classes.h")
+  file(DOWNLOAD "https://raw.githubusercontent.com/bwasti/AICamera/master/app/src/main/cpp/classes.h" "${PROJECT_SOURCE_DIR}/include/res/imagenet_classes.h")
 endif()
 
-file(GLOB LIB_SOURCES "${CMAKE_SOURCE_DIR}/src/caffe2/util/*.cc" "${CMAKE_SOURCE_DIR}/src/caffe2/operator/*.cc")
+file(GLOB LIB_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/util/*.cc" "${PROJECT_SOURCE_DIR}/src/caffe2/operator/*.cc")
 add_library(caffe2_cpp ${LIB_SOURCES})
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   list(APPEND ALL_LIBRARIES -Wl,-force_load caffe2_cpp)
@@ -48,7 +48,7 @@ if(CUDA_LIBRARIES)
   # set(CUDA_PROPAGATE_HOST_FLAGS OFF)
   list(APPEND CUDA_NVCC_FLAGS "-std=c++11")
   list(APPEND CUDA_NVCC_FLAGS "-Wno-deprecated-gpu-targets")
-  file(GLOB CUDA_SOURCES "${CMAKE_SOURCE_DIR}/src/caffe2/operator/*.cu")
+  file(GLOB CUDA_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/operator/*.cu")
   cuda_add_library(caffe2_cpp_gpu ${CUDA_SOURCES})
   if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     list(APPEND ALL_LIBRARIES -Wl,-force_load caffe2_cpp_gpu)
@@ -83,7 +83,7 @@ if(CURL_LIBRARIES)
   add_definitions(-DWITH_CURL)
 endif()
 
-file(GLOB BIN_SOURCES "${CMAKE_SOURCE_DIR}/src/caffe2/binaries/*.cc")
+file(GLOB BIN_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/binaries/*.cc")
 foreach(filename ${BIN_SOURCES})
   get_filename_component(name ${filename} NAME_WE)
   add_executable(${name} ${filename})
