--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,9 +83,11 @@ if(CURL_LIBRARIES)
   add_definitions(-DWITH_CURL)
 endif()
 
-file(GLOB BIN_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/binaries/*.cc")
-foreach(filename ${BIN_SOURCES})
-  get_filename_component(name ${filename} NAME_WE)
-  add_executable(${name} ${filename})
-  target_link_libraries(${name} ${ALL_LIBRARIES})
-endforeach()
+if (NOT DEFINED CAFFE2_CPP_TUTORIAL_LIB_ONLY)
+  file(GLOB BIN_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/binaries/*.cc")
+  foreach(filename ${BIN_SOURCES})
+    get_filename_component(name ${filename} NAME_WE)
+    add_executable(${name} ${filename})
+    target_link_libraries(${name} ${ALL_LIBRARIES})
+  endforeach()
+endif()
