--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ if(NOT CAFFE2_LIB)
 endif()
 
 set(ALL_LIBRARIES)
+set(ALL_DEPENDENCIES)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 
@@ -36,13 +37,20 @@ if(NOT EXISTS "${PROJECT_SOURCE_DIR}/include/res/imagenet_classes.h")
   file(DOWNLOAD "https://raw.githubusercontent.com/bwasti/AICamera/master/app/src/main/cpp/classes.h" "${PROJECT_SOURCE_DIR}/include/res/imagenet_classes.h")
 endif()
 
+macro(link_whole_archive lib)
+  if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+    list(APPEND ALL_LIBRARIES -Wl,-force_load,$<TARGET_FILE_NAME:${lib}>)
+  elseif(MSVC)
+    list(APPEND ALL_LIBRARIES -WHOLEARCHIVE:$<TARGET_FILE_NAME:${lib}>)
+  else()
+    list(APPEND ALL_LIBRARIES -Wl,--whole-archive ${lib} -Wl,--no-whole-archive)
+  endif()
+  list(APPEND ALL_DEPENDENCIES ${lib})
+endmacro()
+
 file(GLOB LIB_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/util/*.cc" "${PROJECT_SOURCE_DIR}/src/caffe2/operator/*.cc")
 add_library(caffe2_cpp ${LIB_SOURCES})
-if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  list(APPEND ALL_LIBRARIES -Wl,-force_load caffe2_cpp)
-else()
-  list(APPEND ALL_LIBRARIES -Wl,--whole-archive caffe2_cpp -Wl,--no-whole-archive)
-endif()
+link_whole_archive(caffe2_cpp)
 
 if(CUDA_LIBRARIES)
   # set(CUDA_PROPAGATE_HOST_FLAGS OFF)
@@ -50,11 +58,7 @@ if(CUDA_LIBRARIES)
   list(APPEND CUDA_NVCC_FLAGS "-Wno-deprecated-gpu-targets")
   file(GLOB CUDA_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/operator/*.cu")
   cuda_add_library(caffe2_cpp_gpu ${CUDA_SOURCES})
-  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    list(APPEND ALL_LIBRARIES -Wl,-force_load caffe2_cpp_gpu)
-  else()
-    list(APPEND ALL_LIBRARIES -Wl,--whole-archive caffe2_cpp_gpu -Wl,--no-whole-archive)
-  endif()
+  link_whole_archive(caffe2_cpp_gpu)
 endif()
 
 list(APPEND ALL_LIBRARIES ${CAFFE2_LIB})
@@ -88,6 +92,7 @@ if (NOT DEFINED CAFFE2_CPP_TUTORIAL_LIB_ONLY)
   foreach(filename ${BIN_SOURCES})
     get_filename_component(name ${filename} NAME_WE)
     add_executable(${name} ${filename})
+    add_dependencies(${name} ${ALL_DEPENDENCIES})
     target_link_libraries(${name} ${ALL_LIBRARIES})
   endforeach()
 endif()
