add dream display

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,6 @@ if(NOT CAFFE2_LIB)
 endif()
 
 set(ALL_LIBRARIES)
-set(ALL_DEPENDENCIES)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 
@@ -39,13 +38,12 @@ endif()
 
 macro(link_whole_archive lib)
   if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
-    list(APPEND ALL_LIBRARIES -Wl,-force_load,$<TARGET_FILE_NAME:${lib}>)
+    list(APPEND ALL_LIBRARIES -Wl,-force_load,$<TARGET_FILE_NAME:${lib}> ${lib})
   elseif(MSVC)
     list(APPEND ALL_LIBRARIES -WHOLEARCHIVE:$<TARGET_FILE_NAME:${lib}>)
   else()
     list(APPEND ALL_LIBRARIES -Wl,--whole-archive ${lib} -Wl,--no-whole-archive)
   endif()
-  list(APPEND ALL_DEPENDENCIES ${lib})
 endmacro()
 
 file(GLOB LIB_SOURCES "${PROJECT_SOURCE_DIR}/src/caffe2/util/*.cc" "${PROJECT_SOURCE_DIR}/src/caffe2/operator/*.cc")
@@ -92,7 +90,6 @@ if (NOT DEFINED CAFFE2_CPP_TUTORIAL_LIB_ONLY)
   foreach(filename ${BIN_SOURCES})
     get_filename_component(name ${filename} NAME_WE)
     add_executable(${name} ${filename})
-    add_dependencies(${name} ${ALL_DEPENDENCIES})
     target_link_libraries(${name} ${ALL_LIBRARIES})
   endforeach()
 endif()
