--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ find_library(CAFFE2_LIB caffe2)
 find_library(CAFFE2_GPU_LIB caffe2_gpu)
 find_library(GLOG_LIB glog)
 find_library(GFLAGS_LIB gflags)
+find_library(GTEST_LIB gtest)
 find_library(NCCL_LIB nccl) # Somehow necessary to prevent "undefined reference to `ncclReduceScatter'"
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC ")
@@ -88,5 +89,12 @@ if (NOT DEFINED CAFFE2_CPP_TUTORIAL_LIB_ONLY)
     get_filename_component(name ${filename} NAME_WE)
     add_executable(${name} ${filename})
     target_link_libraries(${name} ${ALL_LIBRARIES})
+  endforeach()
+
+  file(GLOB TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/caffe2/util/*_test.cc")
+  foreach(filename ${TEST_SOURCES})
+    get_filename_component(name ${filename} NAME_WE)
+    add_executable(${name} ${filename})
+    target_link_libraries(${name} ${ALL_LIBRARIES} ${GTEST_LIB})
   endforeach()
 endif()
