fix gtest missing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,10 +91,12 @@ if (NOT DEFINED CAFFE2_CPP_TUTORIAL_LIB_ONLY)
     target_link_libraries(${name} ${ALL_LIBRARIES})
   endforeach()
 
-  file(GLOB TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/caffe2/util/*_test.cc")
-  foreach(filename ${TEST_SOURCES})
-    get_filename_component(name ${filename} NAME_WE)
-    add_executable(${name} ${filename})
-    target_link_libraries(${name} ${ALL_LIBRARIES} ${GTEST_LIB})
-  endforeach()
+  if(GTEST_LIB)
+    file(GLOB TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/caffe2/util/*_test.cc")
+    foreach(filename ${TEST_SOURCES})
+      get_filename_component(name ${filename} NAME_WE)
+      add_executable(${name} ${filename})
+      target_link_libraries(${name} ${ALL_LIBRARIES} ${GTEST_LIB})
+    endforeach()
+  endif()
 endif()
