add model bundle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,11 @@ find_library(GFLAGS_LIB gflags)
 find_library(GTEST_LIB gtest)
 find_library(NCCL_LIB nccl) # Somehow necessary to prevent "undefined reference to `ncclReduceScatter'"
 
+set(PB_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src/caffe2/util")
+execute_process(
+  COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} --proto_path=../caffe2 --proto_path=${PB_SOURCE_DIR} --cpp_out=${PB_SOURCE_DIR} "${PB_SOURCE_DIR}/model.proto"
+  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC ")
 
 if(NOT CAFFE2_LIB)
