修改：     CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ include_directories(/home/xieyi/opt/caffe2/include)
 
 find_library(CAFFE2_LIB caffe2)
 find_library(CAFFE2_GPU_LIB caffe2_gpu)
+find_library(DETECTRON_GPU_LIB caffe2_detectron_ops_gpu)
 find_library(GLOG_LIB glog)
 find_library(GFLAGS_LIB gflags)
 find_library(GTEST_LIB gtest)
@@ -68,6 +69,11 @@ list(APPEND ALL_LIBRARIES ${CAFFE2_LIB})
 if(CAFFE2_GPU_LIB)
   list(APPEND ALL_LIBRARIES ${CAFFE2_GPU_LIB})
   add_definitions(-DWITH_GPU)
+endif()
+
+if(DETECTRON_GPU_LIB)
+  list(APPEND ALL_LIBRARIES ${DETECTRON_GPU_LIB})
+  ADD_DEFINITIONS(-DWITH_GPU)
 endif()
 
 list(APPEND ALL_LIBRARIES ${PROTOBUF_LIBRARY})
